# Raytracer

./: .gitignore  CMakeLists.txt  color.h  constants.h  diffuse.cpp  glass.cpp  glass.h  hit.cpp  hit.h  lambertian.cpp  lambertian.h  material.cpp  material.h  metallic.cpp  metallic.h  pixels.cpp  pixels.h  random.cpp  random.h  specular.cpp  specular.h  sphere.cpp  sphere.h  test-camera.cpp  test-intersect.cpp  test-materials.cpp  test-pixels.cpp  test-random.cpp  test-world.cpp  vector3d.cpp  vector3d.h  world.cpp  world.h
mesh/: cube.txt  pyramid.txt
src/: CMakeLists.txt  bvh.cpp  bvh.h  camera.cpp  camera.h  parser.cpp  parser.h  world.cpp  world.h
src/core/: CMakeLists.txt  aabb.cpp  aabb.h  constants.h  hit.cpp  hit.h  material.cpp  material.h  noise.cpp  noise.h  object.cpp  object.h  random.cpp  random.h  ray.cpp  ray.h  texture.h  vector3d.cpp
src/image/: CMakeLists.txt  pixels.cpp  pixels.h
src/materials/: CMakeLists.txt  diffuse.cpp  diffuse.h  glass.cpp  glass.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  metallic.cpp  metallic.h  specular.cpp  specular.h
src/objects/: CMakeLists.txt  constant_medium.cpp  constant_medium.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  terrain.cpp  terrain.h  triangle.cpp  triangle.h
src/textures/: CMakeLists.txt  checkerboard.cpp  checkerboard.h  function2d.cpp  function2d.h  gradient.cpp  gradient.h  image.cpp  image.h  interesting.cpp  interesting.h  marble.cpp  marble.h  solid.cpp  solid.h  surf_norm.cpp  surf_norm.h
test/: CMakeLists.txt  main.cpp  test-bvh.cpp  test-bvh2.cpp  test-camera.cpp  test-fog.cpp  test-materials.cpp  test-parser.cpp  test-pixels.cpp  test-random.cpp  test-triangle.cpp  test-vector3d.cpp  test-world.cpp
